--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^5.6"
+    },
+    "config": {
+        "bin-dir": "bin/"
     }
 }
