--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
     },
     "config": {
         "bin-dir": "bin/"
+    },
+    "autoload": {
+        "psr-0": {
+            "": "src/"
+        }
     }
 }
