Configurato IDE per il coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,5 +10,10 @@
             <directory>./test</directory>
         </testsuite>
     </testsuites>
-
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src/</directory>
+            <directory suffix=".php">test/</directory>
+        </whitelist>
+    </filter>
 </phpunit>
